<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.abdelrhmanhsh.weatherforecast.ui.view.home.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/favouritesFragment"
        android:name="com.abdelrhmanhsh.weatherforecast.ui.view.favourites.FavouritesFragment"
        android:label="@string/fragment_favourites"
        tools:layout="@layout/fragment_favourites" >

        <action
            android:id="@+id/actionFavouritesToMaps"
            app:destination="@id/mapsFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
        <action
            android:id="@+id/actionFavouritesToHome"
            app:destination="@id/homeFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/mapsFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/alertsFragment"
        android:name="com.abdelrhmanhsh.weatherforecast.ui.view.alerts.AlertsFragment"
        android:label="@string/fragment_alerts"
        tools:layout="@layout/fragment_alerts" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.abdelrhmanhsh.weatherforecast.ui.view.settings.SettingsFragment"
        android:label="@string/fragment_settings"
        tools:layout="@layout/fragment_settings" >

        <action
            android:id="@+id/actionSettingsToMaps"
            app:destination="@id/mapsFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>

    </fragment>

    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.abdelrhmanhsh.weatherforecast.ui.view.MapsFragment"
        android:label="@string/fragment_maps"
        tools:layout="@layout/fragment_maps">

        <argument
            android:name="flag"
            app:argType="integer"
            android:defaultValue="-1" />

        <action
            android:id="@+id/actionMapsToHome"
            app:destination="@id/homeFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/mapsFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/actionMapsTFavourites"
            app:destination="@id/favouritesFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popUpTo="@id/mapsFragment"
            app:popUpToInclusive="true"/>

    </fragment>

</navigation>