<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.HomeFragment"
    android:background="#474646">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- current weather -->
        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Alexandria"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="14dp"/>

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="March 31, 1:51 AM"
            android:padding="6dp"
            android:layout_marginStart="6dp"/>

        <TextView
            android:id="@+id/current_weather_highest_lowest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/current_date"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="Day 29 Night 11"
            android:padding="6dp"
            android:layout_marginStart="6dp" />

        <TextView
            android:id="@+id/current_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/current_weather_highest_lowest"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="52sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="12 C"
            android:padding="6dp"
            android:layout_marginStart="6dp" />

        <TextView
            android:id="@+id/feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/current_weather"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="Feels like 12"
            android:padding="6dp"
            android:layout_marginStart="6dp"/>

        <ImageView
            android:id="@+id/current_weather_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@mipmap/ic_launcher"
            android:padding="18dp"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/current_weather_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/current_weather_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="Clear Sky"
            android:padding="12dp" />


        <!-- hourly weather -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourly_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/feels_like"
            android:layout_marginTop="10dp"/>

        <!-- daily weather -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/daily_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/hourly_recycler_view"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <!-- more info -->
        <LinearLayout
            android:id="@+id/linear_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/daily_recycler_view"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/image_pressure"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/current_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="1021 hpa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/pressure" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/image_humidity"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/current_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="77%" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/humidity" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/image_wind"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/current_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="2.06 m/s" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/wind" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear_more"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/image_cloud"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/current_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="0%" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/cloud" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/image_ultra_violet"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/current_ultra_violet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/ultra_violet" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/image_visibility"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/current_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="600 ms" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/visibility" />

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>